--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     ports:
       - "5173:5173"
     environment:
-      - VITE_API_BASE_URL=http://bun-server:3000 # API URL for React app to reach Bun server
+      - VITE_API_BASE_URL=${VITE_API_BASE_URL}
     depends_on:
       - bun-server
 
@@ -17,4 +17,4 @@ services:
     ports:
       - "3000:3000"
     environment:
-      - CLIENT_URL=http://vite-app:5173 # React app's URL for CORS configuration
+      - CLIENT_URL=${CLIENT_URL}
